--- a/views/layouts/nav.ejs
+++ b/views/layouts/nav.ejs
@@ -24,8 +24,8 @@
             </ul>
           </li>
         </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <form class="d-flex" method="post" action="/search">
+          <input class="form-control me-2" type="text" placeholder="Search" aria-label="Search" name="title">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
       </div>
